label pet states as glitched, send to bottom of emotion order

--- a/config/locales/en-MEEP.yml
+++ b/config/locales/en-MEEP.yml
@@ -673,6 +673,7 @@ en-MEEP:
         happy: ":)"
         sad: ":("
         sick: "X("
+      glitched: "#!@?!?"
       unconverted: Unconveeped
       unlabeled: Unleeped
   
