--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -725,6 +725,7 @@ en:
         happy: Happy
         sad: Sad
         sick: Sick
+      glitched: Glitched
       unconverted: Unconverted
       unlabeled: Unlabeled
   
