list prank colors as fake on the homepage, unless pranks are funny today

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -219,6 +219,7 @@ en:
   
   colors:
     default_human_name: (a new color)
+    prank_suffix: (fake)
 
   contributions:
     contributed_description:
