--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -220,6 +220,15 @@ en:
   colors:
     default_human_name: (a new color)
     prank_suffix: (fake)
+    prank_message:
+      funny_html: This pet is painted %{color}, a totally real,
+        obviously not-made-up color. You should <em>totally</em> go spend all
+        your hard-earned Neopoints on a %{color} Paint Brush and fall for
+        %{color} pet trade scams, because %{color} is <em>totally</em> a real
+        thing. C'mon, would I lie to you? On today of all days?
+      unfunny_html: This pet is painted %{color}, a fake color added to the
+        site for April Fools 2014. Anyone who claims to have a <em>real</em>
+        Nebula pet is a big fat liar.
 
   contributions:
     contributed_description:
