while we're here, bump order of magnitude on outfit count
we also now have tens of thousands of users, but that bump makes it
flow worse, so whatever :P

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -586,7 +586,7 @@ en:
               and view it again later**, either to update your design or
               finally make your dream a reality.
             
-              **Thousands of users have already saved tens of thousands of
+              **Thousands of users have already saved hundreds of thousands of
               outfits. Will you be next?**
             sign_in: Log in to save this outfit
           outfit:
