--- a/config/locales/en-MEEP.yml
+++ b/config/locales/en-MEEP.yml
@@ -33,7 +33,7 @@ en-MEEP:
       footer:
         blog: Bleep
         source_code: Source Meep
-        terms: Terms of Meep
+        terms: Terms of Use (meeped Aug 2014)
         contact: Meeptact
         suggestions: Suggesteeps
         email: Questions, comments, meepits
