--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,7 +33,7 @@ en:
       footer:
         blog: Blog
         source_code: Source Code
-        terms: Terms of Use
+        terms: Terms of Use (updated Aug 2014)
         contact: Contact
         suggestions: Suggestions
         email: Questions, comments, bugs
